# voicenotes-desktop

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-windows.sh  package-windows.sh  setup.sh  whisper.cpp
src/: main.cpp
